feat(connector): change batch upload to accept JSON with Base64
